# sdk-python

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AWS_INSTANCE_SIZING.md  AWS_PRICING.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  GEMINI_LIVE_PR.md  LICENSE  MIGRATION.md  PRODUCTION_DEPLOYMENT.md  PR_DESCRIPTION.md  PULL_REQUEST.md  README.md  RUN_GUIDE.md  SECURITY.md  STRANDS_INTEGRATION_PLAN.md  STRANDS_INTEGRATION_SUCCESS.md  STYLE_GUIDE.md  TECHNICAL_REQUIREMENTS.md  TESTING_GUIDE.md  TODO.lis  TRAINING_IMPLEMENTATION_SUMMARY.md  USAGE_GUIDE.md  a2a_client.py  a2a_server.py  aws_sigv4.md  branching-workflow.md  integrate_with_strands.sh  llms.txt  pr-description.md  pyproject.toml  repomix-output.xml  setup.py  strands-rds-discovery-tool-1month-plan.md  strands_integration_start.sh  strands_integration_steps.sh  test.py  (+3 more)
.agents/reviews/: review-2026-04-13.md
.artifact/: write_operations.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/: README.md
.github/actions/strands-agent-runner/: action.yml
.github/workflows/: LAMBDA_LAYERS_SOP.md  auto-close-3-days.yml  auto-close-7-days.yml  auto-close.yml  auto-strands-review.yml  check-markdown-links.yml  ci.yml  dispatch-docs.yml  integration-test.yml  pr-and-push.yml  pr-size-labeler.yml  publish-lambda-layer.yml  pypi-publish-on-release.yml  strands-command.yml  sync-upstream.yml  test-lint-pr.yml  test-lint.yml  test.yml  verify-agent-builder-compatibility.yml  verify-docs-compatibility.yml  verify-tools-compatibility.yml  weekly-release.yml  yank-lambda-layer.yml
.kiro/specs/tool-registry-refactor/: design.md
alembic/: env.py
alembic/versions/: 921ec49d16c9_create_session_tables.py
docs/: DEPLOY.md  DEPLOY_RESEARCH.md  EVALUATION.md  HOOKS.md  README.md  training.md
docs/designs/: 0002-deploy.md
examples/: evaluation_example.py  iss_agent.py  iss_client.py  simple_evaluation.py  test_camb_tools.py  test_stream_chunk_hook.py
examples/bidirectional_streaming/: openai_realtime_example.py
examples/training/: advanced_training_example.py  basic_training_example.py
notebooks/: sandbox_testing.ipynb
rfcs/: 0001-agent-manifest.md  0002-agent-composition.md
scripts/: format.py  generate_agents_guide.md  generate_agents_guide.py  lint.py  test.py  test_integ.py
scripts/bidi/: test_bidi.py  test_bidi_novasonic.py  test_bidi_openai.py  test_gemini_live.py
src/: rds_discovery.py
src/strands/: __init__.py  _async.py  _identifier.py  checkpoint.py  interrupt.py
src/strands/agent/: __init__.py  _agent_as_tool.py  a2a_agent.py  agent.py  agent_as_tool.py  agent_registry.py  agent_result.py  config.py  execution_state.py  identifier.py  interrupt.py  (+4 more)
tests/: TODO.lis  conftest.py  test_llamaapi.py  test_rds_discovery.py  test_tool_literal_pydantic_compat.py
tests-integ/: conftest.py  test_bedrock_guardrails.py  test_class_loader.py  test_class_loader_integ.py  test_mcp_client.py  test_mcp_github_remote.py  test_method_tools.py  test_model_anthropic.py  test_model_baseten.py  test_model_bedrock.py  test_model_cohere.py  test_model_gemini.py  test_model_litellm.py  test_model_llamaapi.py  test_model_mistral.py  test_model_ollama.py  test_model_openai.py  test_model_palmyra.py  test_model_sagemaker.py  test_model_stability.py  test_model_vllm.py  test_model_writer.py  test_multiagent_graph.py  test_rate_limiter.py  test_session.py  test_summarizing_conversation_manager_integration.py  test_with_output.py
tests/fixtures/: mock_agent_tool.py  mock_multiagent_hook_provider.py  mock_session_repository.py  mocked_model_provider.py  say_tool.py
tests/strands/: test_async.py  test_interrupt.py  test_pyproject.py
tests_integ/: conftest.py  echo_server.py  test_a2a_executor.py  test_agent_checkpoint.py  test_agent_structured_output.py  test_agents_as_tools.py  test_bedrock_cache_point.py  test_bedrock_guardrails.py  test_bedrock_invoke_integration.py  test_bedrock_s3_location.py  test_cancellation.py  test_dapr_session.py  test_delegation_integration.py  test_interrupt.py  test_invocation_args_e2e.py  test_max_tokens_reached.py  test_mcp_client.py  test_mcp_tool_provider.py  test_multiagent_function_node.py  test_multiagent_graph.py  test_multiagent_swarm.py  test_multiagent_swarm_agentbase.py  test_registry.py  test_session.py  test_skills_plugin.py  test_strands_context_integration.py  test_stream_agent.py  test_structured_output_agent_loop.py  test_structured_output_bedrock_llama_models.py  test_summarizing_conversation_manager_integration.py  test_tool_retry_hook.py  test_tool_streaming.py  test_utcp_client.py  utcp_calculator_server.py  utcp_echo_server.py
tests_integ/a2a/: test_multiagent_a2a.py
tests_integ/bidi/: context.py  test_bidi_hooks.py  test_bidirectional_agent.py
tests_integ/bidirectional_streaming/: conftest.py  context.py  test_bidirectional_agent.py
tests_integ/hooks/: test_events.py  test_stream_chunk_event.py
tests_integ/mcp/: echo_server.py  task_echo_server.py  test_mcp_client.py  test_mcp_client_meta_with_hooks.py  test_mcp_client_structured_content_and_metadata.py  test_mcp_client_structured_content_with_hooks.py  test_mcp_client_tasks.py  test_mcp_config.py  test_mcp_elicitation.py  test_mcp_output_schema.py  test_mcp_resources.py  test_mcp_tool_provider.py
tests_integ/models/: providers.py  test_conformance.py  test_fallback_integration.py  test_model_anthropic.py  test_model_baseten.py  test_model_bedrock.py  test_model_clova.py  test_model_cohere.py  test_model_deepseek.py  test_model_gemini.py  test_model_litellm.py  test_model_llamaapi.py  test_model_mantle.py  test_model_minimax.py  test_model_mistral.py  test_model_neuronvllm.py  test_model_ollama.py  test_model_openai.py  test_model_ovhcloud.py  test_model_sagemaker.py  test_model_sap_genai_hub.py  test_model_sglang.py  test_model_vllm.py  test_model_writer.py  test_model_xai.py
tests_integ/steering/: test_llm_handler.py  test_model_steering.py  test_tool_steering.py
tests_integ/tools/: test_langchain_tool.py
(+759 files in other folders)
